<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_add_participant_view"
        tools:context=".addparticipant.mvvm.AddParticipantView">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/create_participant_et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:hint="Email address"
            android:importantForAutofill="no" android:layout_margin="8dp" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/create_participant_et_firstname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_participant_et_email"
            app:layout_constraintEnd_toEndOf="parent" android:hint="Firstname" android:importantForAutofill="no"
            android:layout_margin="8dp" />
    <EditText
            android:layout_width="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/create_participant_et_lastname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_participant_et_firstname"
            app:layout_constraintStart_toStartOf="parent" android:hint="Lastname" android:importantForAutofill="no"
            android:layout_height="wrap_content" android:layout_margin="8dp"/>
    <TextView
            android:text="@string/create_participant_explaination"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp"/>
    <Button
            android:text="@string/create_participant_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/create_participant_bt_submit" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:includeFontPadding="true"
            android:layout_marginBottom="12dp" android:elevation="0dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/create_participant_progress"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/create_participant_bt_submit"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/create_participant_et_lastname"
            android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>